RPC-Notes